[project]
name = "py-http-packages"
version = ""
description = "Python HTTP packages comparison"
authors = [
    {name = "Allainclair Flausino dos Santos", email = "allainclair@gmail.com"},
]
dependencies = [
    "httpx>=0.24.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
