[project]
name = "py-http-packages"
version = "0.0.1"
description = "Python HTTP packages comparison"
authors = [
    {name = "Allainclair Flausino dos Santos", email = "allainclair@gmail.com"},
]
dependencies = [
    "httpx>=0.24.1",
    "requests>=2.31.0",
    "aiohttp>=3.8.5",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
server = "bash -c 'cd serve_dir && python -m http.server 9001'"
test-it = "python -m src.compare_httpx"
